Revert "new stories button alignment fix"
This reverts commit 2adc1dc34644558851fa333c12d52597e514169b.

--- a/src/assets/scss/components/navigation.scss
+++ b/src/assets/scss/components/navigation.scss
@@ -11,7 +11,11 @@
     height: 25px;
   }
 }
-
+.btn-text-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 @media only screen and (max-width: 768px) {
   .nav-header {
     padding: 22px 10px 0;
